[package]
name = "prompter"
version = "0.1.3"
edition = "2021"
rust-version = "1.74.1"
authors = ["Anett Seeker"]
license = "MIT OR Apache-2.0"
description = "A Wordle solver in Rust"
readme = "README.md"
repository = "https://github.com/noeddl/prompter"
keywords = ["wordle", "puzzle", "game", "solver"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5", features = ["derive"]}
env_logger = "0.11"
log = "0.4"
itertools = "0.13"

[dev-dependencies]
rstest = "0.23"

[profile.release]
strip="debuginfo"
